<resources>
    <string name="app_name">UtahStateParks</string>
    <string name="boat_menu_button">Boat Menu Button</string>
    <string name="atv_menu_button">ATV Menu Button</string>
    <string name="park_menu_button">Park Menu Button</string>
    <string name="pass_menu_button">Pass Menu Button</string>
    <string name="find_a_park">Find A Park</string>
    <string name="boating_information">Boating Information</string>
    <string name="park_passes">Park Passes</string>
    <string name="off_highway_vehicle">Off-Highway Vehicle</string>
    <string name="header_image">Header Image</string>
    <string name="information">Information</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="boating_info">Boating Info</string>
</resources>